# EntropIA-Pro

./: .gitattributes  CLAUDE.md  CODE_SIGNING.en.md  CODE_SIGNING.md  DATABASE_DEBUGGING.en.md  DATABASE_DEBUGGING.md  LICENSE  PRIVACY.en.md  PRIVACY.md  README.en.md  README.md  SQLite.en.md  SQLite.md  THIRD_PARTY_NOTICES.en.md  THIRD_PARTY_NOTICES.md  eslint.config.js  opencode.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: release-template.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.lite.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/msix/: README.md
apps/desktop/src-tauri/release/: package_runtime_bootstrap.py
apps/desktop/src-tauri/resources/: README.en.md  README.md
apps/desktop/src-tauri/resources/models/: README.md
apps/desktop/src-tauri/resources/runtime-pack/: MAINTENANCE.en.md  MAINTENANCE.md
apps/desktop/src-tauri/scripts/: build_runtime_pack.py  materialize_windows_runtime_payload.py  prepare_runtime_payload.py  publish_runtime_bootstrap.py  repack-store-msix.ps1  runtime-pack-smoke.py  rust-coverage.ps1  rust-quality-contract.ps1  rust-verify-gate.ps1  spacy_ner.py  test_runtime_pack_scripts.py  windows-feature-contract.ps1
apps/desktop/src-tauri/scripts/tests/: rust-quality-contract.Tests.ps1  rust-verify-gate.Tests.ps1
apps/desktop/src-tauri/src/: app_logs.rs  audio_preview.rs  image_edit.rs  lib.rs  main.rs  path_utils.rs  python_discovery.rs  settings.rs
apps/desktop/src-tauri/src/db/: commands.rs  mod.rs  util.rs
apps/desktop/src-tauri/src/geo/: mod.rs
apps/desktop/src-tauri/src/llm/: commands.rs  download.rs  mod.rs  prompt.rs
apps/desktop/src-tauri/src/nlp/: chunking.rs  commands.rs  embeddings.rs  fts.rs  mod.rs  text_provider.rs  vector.rs
apps/desktop/src-tauri/src/ocr/: commands.rs  debug_viz.rs  glm_ocr.rs  layout_onnx.rs  mod.rs  paddle.rs  paddle_vl.rs  paddle_vl_types.rs  pdf.rs  pdf_probe.rs  postprocess.rs  preprocessor.rs  provider.rs
apps/desktop/src-tauri/src/rag/: commands.rs  mod.rs  params.rs  retrieval.rs  store.rs
apps/desktop/src-tauri/src/runtime/: bootstrap.rs  download.rs  manager.rs  manifest.rs  mod.rs  ops_lock.rs  paths.rs  status.rs
apps/desktop/src-tauri/windows/: hooks.nsh
(+162 files in other folders)
