[package]
name = "entropia-pro-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "entropia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = "1"
ocr-rs = { version = "2.2", optional = true, features = ["build-mnn-from-source"] }
pdf-extract = "0.7"
pdfium-render = "0.8"
image = "0.25"
imageproc = "0.25"
png = "0.18"
tokio = { version = "1", features = ["full"] }
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
ndarray = "=0.16.1"
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["ndarray", "load-dynamic"] }
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
encoding_rs = "0.8"
llama-cpp-2 = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
urlencoding = "2"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2"
# Audio preview decoding (prepare_audio_preview command): decode arbitrary
# source audio to a PCM16 WAV the webview <audio> element can play.
symphonia = { version = "0.5", features = ["all"] }
hound = "3"
# Embeddings use a bundled local ONNX model via Rust ort. Transcription still
# uses Python subprocess (scripts/transcribe.py) for faster-whisper isolation.

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
default = ["paddle-ocr"]
# The paddle-ocr feature requires MNN to be built from source on Windows
# (prebuilt MNN libs have a linker issue: __std_min_4i/__std_max_4i unresolved).
# The build-mnn-from-source flag in the ocr-rs dependency ensures MNN compiles
# locally via CMake, which resolves the linker symbols correctly.
paddle-ocr = ["dep:ocr-rs"]
